# Web-Browser-Botseu

./: .gitignore  .vercelignore  README.md  _config.yml  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
tests/: test_charlie_wade.py  test_search_ddg.py
