[tool.poetry]
name = "repl_python3_messengerbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.2"
newspaper3k = "^0.2.8"
google = "^3.0.0"
hanapin = "^0.1.6"
replit = "^3.2.4"
google-custom-search = "^0.1.4.1"
duckduckgo-search = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
